# specreason

./: .gitignore  README.md  baseline_1p5.py  baseline_1p5_della.sh  baseline_32b.py  baseline_32b_della.sh  pyproject.toml  spec_cot.py  spec_cot_della.sh  spec_decoding_fix.md  spec_reason.py  spec_reason_della.sh
results/: process_pickle.py
results/60/: 0.pickle  0.txt  1.pickle  1.txt  2.pickle  2.txt
